feat: Enhance scoring service and ml service fix
